# Monteur-Resolve

./: .gitignore  README.md  pyproject.toml
.github/workflows/: dev-release.yml
docs/: LAUNCH.md  MAGIE-BLUEPRINT.md  PACKAGING.md  ROADMAP.md
examples/demo/: script.fountain
fable/: __init__.py  ai.py  analysis.py  assembly.py  cli.py  media.py  model.py  montage.py  music.py  papercut.py  project.py  references.py  report.py  resolve.py  screenplay.py  sift.py  transcribe.py
fable/io/: __init__.py  edl.py  fcpxml.py  srt.py  whisperjson.py
fable/web/: __init__.py  app.html  server.py
monteur/: __init__.py  __main__.py  _resolve_worker.py  ai.py  analysis.py  assembly.py  brief.py  changelist.py  cli.py  color.py  compose.py  coverage.py  critique.py  daylight.py  director.py  distill.py  drafts.py  elements.py  find.py  mcp_server.py  media.py  model.py  montage.py  movie.py  music.py  papercut.py  payload.py  pick.py  preferences.py  preview.py  procio.py  project.py  projects.py  proxies.py  publish.py  references.py  refine.py  reframe.py  report.py  resolve.py  (+13 more)
monteur/io/: __init__.py  edl.py  fcpxml.py  srt.py  whisperjson.py
packaging/: monteur.iss  monteur.spec  monteur_app.py
scripts/: build_exe.py  build_installer.py  build_payload.py  make_icon.py  sign.py
site/: download.html  features.html  index.html  pricing.html
tests/: _demo.py  conftest.py  make_demo_footage.py  test_ai.py  test_analysis.py  test_arrange.py  test_assembly.py  test_audio_modes.py  test_beat_quality.py  test_brief.py  test_cancel.py  test_changelist.py  test_color.py  test_compose.py  test_coverage.py  test_daylight.py  test_director.py  test_distill.py  test_drafts.py  test_elements.py  test_find.py  test_io_edl.py  test_io_fcpxml.py  test_io_srt.py  test_magie_wave1.py  test_magie_wave2.py  test_magie_wave3.py  test_magie_wave4.py  test_mcp.py  test_media_motion.py  test_model.py  test_montage.py  test_movie.py  test_music.py  test_music_gaps.py  test_music_window.py  test_packaging.py  test_papercut.py  test_payload.py  test_peak.py  (+30 more)
(+12 files in other folders)
