[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monteur"
version = "0.1.0"
description = "Monteur — AI-assisted editing room toolkit for DaVinci Resolve: transcript-based rough cuts, pacing analytics, and project organization."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Maik" }]
keywords = ["film", "editing", "davinci-resolve", "edl", "fcpxml", "pacing", "rough-cut", "transcript"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Other Audience",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
]
dependencies = []

[project.optional-dependencies]
ai = ["anthropic>=0.40"]
media = ["numpy>=1.24", "imageio-ffmpeg>=0.4.9"]
mcp = ["mcp>=1.2"]
dev = ["pytest>=8"]

[project.scripts]
monteur = "monteur.cli:main"

[tool.setuptools.packages.find]
include = ["monteur*"]

[tool.setuptools.package-data]
"monteur.web" = ["app.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
